# snapshot 0.7.2

10 Nov 2003 mipsator
 * fixed init of CXXFLAGS.
 * added init of CXX.

# snapshot 0.7.1

07 Nov 2003 mipsator
 * improved init of CFLAGS, CXXFLAGS, CPPFLAGS, LIBS, LDFLAGS and
	DEBUG with values gathered from make.
 * changed target of get_make_var() from test to all.
 * enabled pmkinstall in Makefile and Makefile.pmk including man page.
 * added pmkinstall man page.
 * modified compat.c to make ansi compiler happy. 

04 Nov 2003 mipsator
 * added makepath() in pathtools.
 * modified process_template() to use makepath().

27 Oct 2003 mipsator
 * updated Makefile.pmk to build in a test directory.
 * rewritten ac_parse_config() and fixed AC_COMPAT to be relative to
	pmkfile location
 * added defines for pmk's specific directories (builddir, ...).
 * updated samples of pmkfile and Makefiles.
 * use pmk values for autoconf directories.
 * modified arguments of ac_process_dyn_var() and process_dyn_var().
 * reorganised order of autoconf directories in Makefiles samples.

18 Oct 2003 mipsator
 * fixed computing of top_srcdir.
 * added processing of dynamic variables in pmk.
 * added creation of directories in template processing.
 * changed init_var() arguments.
 * updated pmkfile.

14 Oct 2003 mipsator
 * removed obsolete stuff (mostly compat with 0.6 syntax).

# PMK 0.7 released

12 Oct 2003 mipsator
 * removed stuff not related to autoconf into ac_set_variables().
 * added some more stuff in ac_set_variables().
 * changed init of alternative variables in func.

10 Oct 2003 mipsator
 * improved process_template().
 * fixed computing of top_srcdir in ac_process_dyn_var().
 * more changes in ac_set_variables().

# snapshot 0.6.6

07 Oct 2003 mipsator
 * more autoconf compat.
 * added target for pmkinstall in Makefile.pmk.
 * updated Makefile.
 * fixed missing '/' in pmkscan.h.

06 Oct 2003 mipsator
 * finished addition of third license clause.

05 Oct 2003 mipsator
 * added missing variables for autoconf compatibility.